<resources>
    <string name="app_name">SBEM</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">SBEM</string>
    <string name="nav_header_subtitle">User - Owner</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="version">Version 1.0.0</string>


    <!-- Employee texts -->
    <string name="emp_id">Employee ID</string>
    <string name="emp_new">New</string>
    <string name="new_emp">New Employee</string>
    <string name="emp_terminate">Terminate</string>
    <string name="emp_view">View</string>
    <string name="emp_fname">First Name</string>
    <string name="emp_lname">Last Name</string>
    <string name="emp_email">E-mail</string>
    <string name="emp_id_no">Employee ID Number</string>
    <string name="emp_mobile_no">Mobile Number</string>
    <string name="emp_position">Employee Position</string>
    <string name="emp_hire_date">Hire Date</string>
    <string name="emp_cv">Curriculum Vitae</string>
    <string name="emp_termination">Terminate Employee</string>
    <string name="emp_terminate_date">Termination Date</string>
    <string name="emp_salary">Salary</string>
    <string name="emp_save">Save Employee</string>

    <!-- Department texts -->
    <string name="activate_dept">Activate or Deactivate Department</string>
    <string name="create_dept">Create Departments</string>
    <string name="dept">Departments</string>
    <string name="dept_id">Department ID</string>
    <string name="dept_name">Department Name</string>
    <string name="dept_view">View</string>
    <string name="dept_create">Create</string>
    <string name="dept_create_date">Department Creation Date</string>
    <string name="dept_activate_deactivate">Change State</string>
    <string name="dept_save">Save</string>
    <string name="dept_status">Change Status</string>

    <!-- Leave texts -->
    <string name="grant_revoke_leaves">Grant or Revoke Leaves</string>
    <string name="current_leaves">Leaves Status</string>
    <string name="duties_approve_disapprove">Approve or Disapprove</string>

    <!-- Duties texts -->
    <string name="view_duties">View Duties</string>
    <string name="duty_name">Duty Name</string>
    <string name="duty_title">Duty Title</string>
    <string name="duties">Duties</string>
    <string name="save_duty">Save Duty</string>
    <string name="duty_startdate">Duty Start Date</string>
    <string name="duty_enddate">Expected End Date</string>
    <string name="allocate_duties">Allocate Duties</string>
    <string name="allocate_duty">Allocate Duty</string>

    <!-- Menu texts -->
    <string name="menu_home">Home</string>
    <string name="menu_departments">Departments</string>
    <string name="menu_employees">Employees</string>
    <string name="menu_employee_role">Employee Role</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_share">Share</string>

    <!-- Supervisor -->
    <string name="sup_profile">Profile</string>
    <string name="sup_leaves">Leaves</string>
    <string name="sup_duties">Duties</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">
        Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_supervisor">SupervisorActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="minimum_password_length">Minimum Password Strength is 8</string>
    <string name="auth_failed">Login Failed. Invalid E-mail or Password!</string>
    <string name="emp_department">Department</string>
    <string name="emp_role">Role</string>
    <string name="emp_update_info">UPDATE INFO</string>
    <string name="emp_terminate_info">TERMINATE</string>
    <string name="leave_type_info">Leave Type</string>
    <string name="leave_start_info">Leave Start</string>
    <string name="leave_end">Leave End</string>
    <string name="grant_leave_grant">GRANT LEAVE</string>
    <string name="reasign_duty">REASIGN DUTY</string>
</resources>