<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">


    <item android:title="Functions">
        <menu>
            <item
                android:id="@+id/nav_home"
                android:title="@string/menu_home" />
            <item
                android:id="@+id/nav_employees"
                android:title="@string/menu_employees" />
            <item
                android:id="@+id/nav_departments"
                android:title="@string/menu_departments" />
            <item
                android:id="@+id/nav_employee_role"
                android:title="@string/menu_employee_role" />
        </menu>
    </item>

    <item android:title="Others">
        <menu>
            <item android:id="@+id/nav_profile"
                android:title="@string/menu_profile" />
            <item android:id="@+id/nav_settings"
                android:title="@string/menu_settings" />
            <item android:id="@+id/nav_share"
                android:title="@string/menu_share" />
        </menu>
    </item>

</menu>