<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_sup_profile">

    <fragment
        android:id="@+id/nav_sup_profile"
        android:name="com.project.sbem.supervisor.ui.HomeFragment"
        android:label="@string/sup_profile"
        tools:layout="@layout/fragment_supervisor_profile" />

    <fragment
        android:id="@+id/nav_sup_leaves"
        android:name="com.project.sbem.supervisor.ui.LeavesFragment"
        android:label="@string/sup_leaves"
        tools:layout="@layout/fragment_supervisor_leaves" />

    <fragment
        android:id="@+id/nav_sup_duties"
        android:name="com.project.sbem.supervisor.ui.DutiesFragment"
        android:label="@string/sup_duties"
        tools:layout="@layout/fragment_supervisor_duties" />

</navigation>