<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/room"
    tools:context=".owner.ui.NewEmployeeActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <EditText
                android:id="@+id/emp_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:ems="10"
                android:fontFamily="sans-serif-medium"
                android:hint="@string/emp_id"
                android:inputType="number"
                android:padding="10sp"
                android:textAlignment="center"
                android:textColorHint="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/emp_fname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:ems="10"
                android:fontFamily="sans-serif-medium"
                android:hint="@string/emp_fname"
                android:inputType="text"
                android:padding="10sp"
                android:textAlignment="center"
                android:textColorHint="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/emp_lname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:ems="10"
                android:fontFamily="sans-serif-medium"
                android:hint="@string/emp_lname"
                android:inputType="text"
                android:padding="10sp"
                android:textAlignment="center"
                android:textColorHint="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/emp_phoneno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:ems="10"
                android:fontFamily="sans-serif-medium"
                android:hint="@string/emp_mobile_no"
                android:inputType="number"
                android:padding="10sp"
                android:textAlignment="center"
                android:textColorHint="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/emp_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:ems="10"
                android:fontFamily="sans-serif-medium"
                android:hint="@string/emp_email"
                android:inputType="textWebEmailAddress"
                android:padding="10sp"
                android:textAlignment="center"
                android:textColorHint="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/emp_department"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:ems="10"
                android:fontFamily="sans-serif-medium"
                android:hint="@string/emp_department"
                android:padding="10sp"
                android:textAlignment="center"
                android:textColorHint="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/emp_role"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:ems="10"
                android:fontFamily="sans-serif-medium"
                android:hint="@string/emp_role"
                android:padding="10sp"
                android:textAlignment="center"
                android:textColorHint="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/emp_salary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:ems="10"
                android:fontFamily="sans-serif-medium"
                android:hint="@string/emp_salary"
                android:inputType="number"
                android:padding="10sp"
                android:textAlignment="center"
                android:textColorHint="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/emp_hire_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:ems="10"
                android:fontFamily="sans-serif-medium"
                android:hint="@string/emp_hire_date"
                android:inputType="date"
                android:padding="10sp"
                android:textAlignment="center"
                android:textColorHint="@color/black"
                android:textSize="20sp" />

            <Button
                android:id="@+id/save_employee"
                android:layout_width="match_parent"
                android:layout_height="80sp"
                android:layout_marginTop="20sp"
                android:text="@string/emp_save"
                android:textSize="25sp"
                app:backgroundTint="@null" />


        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>