<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/update_dep_layout"
    tools:context=".owner.ui.ChangeStatusDeptActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/dept_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dept_id"
            android:fontFamily="sans-serif"
            android:textSize="20sp"
            android:padding="10sp"
            android:textAlignment="center"
            android:layout_margin="10sp" />

        <EditText
            android:id="@+id/dept_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dept_name"
            android:fontFamily="sans-serif"
            android:textSize="20sp"
            android:textAlignment="center"
            android:layout_margin="10sp"
            android:padding="10sp"/>

        <EditText
            android:id="@+id/dept_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dept_create_date"
            android:fontFamily="sans-serif"
            android:textSize="20sp"
            android:textAlignment="center"
            android:layout_margin="10sp"
            android:padding="10sp"/>

        <Button
            android:id="@+id/bt_savechanges"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30sp"
            android:fontFamily="sans-serif-medium"
            android:textAlignment="center"
            android:textSize="25sp"
            android:layout_margin="5sp"
            android:paddingBottom="5sp"
            android:paddingTop="5sp"
            android:text="@string/dept_save"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>