<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".owner.ui.CreateDepartmentActivity">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.481"
        android:padding="20sp">

        <EditText
            android:id="@+id/dept_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:ems="10"
            android:fontFamily="sans-serif-medium"
            android:hint="@string/dept_id"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/dept_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:ems="10"
            android:fontFamily="sans-serif-medium"
            android:hint="@string/dept_name"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/dept_create_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:ems="10"
            android:fontFamily="sans-serif-medium"
            android:hint="@string/dept_create_date"
            android:inputType="date"
            android:textAlignment="center"
            android:textSize="25sp" />

        <Button
            android:id="@+id/save_dpt_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:layout_marginTop="30sp"
            android:fontFamily="sans-serif-medium"
            android:paddingTop="10sp"
            android:paddingBottom="10sp"
            android:text="@string/dept_save"
            android:textAlignment="center"
            android:textSize="25sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>