<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".owner.ui.DepartmentsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:orientation="horizontal"
        android:layout_marginTop="0sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/dept_view"
            app:backgroundTint="@null"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.2"
            android:text="@string/dept_view"
            android:textColor="@color/black"
            android:backgroundTint="@color/white"
            android:background="@drawable/side_nav_bar"/>

        <Button
            android:id="@+id/dept_create"
            app:backgroundTint="@null"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.2"
            android:text="@string/dept_create"
            android:textColor="@color/white"
            android:backgroundTint="@color/purple_500"
            android:background="@drawable/side_nav_bar"/>

        <Button
            android:id="@+id/dept_activate_deactivate"
            app:backgroundTint="@null"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="1dp"
            android:text="@string/dept_activate_deactivate"
            android:textColor="@color/white"
            android:backgroundTint="@color/purple_500"
            android:background="@drawable/side_nav_bar"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>